# goit-pythonweb-hw-04

./: .gitignore  README.md  pyproject.toml  sort_files_by_extension.py
