[tool.poetry]
name = "goit-pythonweb-hw-04"
version = "0.1.0"
description = "Fullstack Web Development with Python - Homework 4"
authors = ["Mykola Podopryhora <m.podopryhora@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.5"
aiopath = "0.6.11"
aioshutil = "^1.5"
